frozen_river added to biome detection